Fixed background image issue on iOS.

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,7 @@ section .item {
 /* NavBar */
 .navbar {
     padding: 5px 0 0;
+    z-index: 100;
 }
 
 .nav-item {
@@ -99,6 +100,13 @@ section .item {
     height: 100vh;
 }
 
+#showcase .overlay {
+    background-color: #000;
+    height: 100%;
+    opacity: 0.7;
+    width: 100%;
+}
+
 .header {
     color: #fff;
     font-size: 2rem;
@@ -109,6 +117,10 @@ section .item {
     text-align: center;
     transform: translate(-50%, -50%);
     top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
 }
 
 .header .highlight {
